_sass/layouts/_docs.scss
@import url(/assets/css/prism.css);
@import "code";

.docs-search-container {
  input {
    padding: 8px 16px;
    background-color: white;
    border-radius: 8px;
    border: 1px solid $color-dark-4;
  }

  .docs-results-absolute {
    right: 0px;
    position: absolute;
    background-color: white;
    z-index: 1003;
    display: block;
    max-height: 450px;
    overflow: auto;
    text-align: left;
    padding: 0.5rem;
    width: 50vw;

    @include custom-scrollbar;

    .search-result-link {
      color: $color-dark-2;
      display: inline-block;
      padding: 8px 16px;
      width: 100%;

      &:hover {
        text-decoration: none;
        background-color: $color-light-3;
        border-radius: 8px;
      }

      .highlighted {
        color: $color-shamrock-main;
        background-color: $color-green-4;
        border-radius: 5px;
      }
    }
  }
}

body.has-notification {

  .sticky-docs-navbar {
    top: calc(#{$notification-bar-height} + 3rem);
  }

  :target:before {
    content: "";
    display: block;
    height: 170px + $notification-bar-height;
    margin: (-170px + $notification-bar-height) 0 0;
  }

}

.sticky-docs-navbar {
  position: sticky;
  top: 8rem;
}

.docs-sidebar-nav, .docs-mobile-navigation-container {
  $sidebar-vertical-margin: 170px;

  background-color: $color-light-3;
  max-height: calc(100vh - #{$sidebar-vertical-margin});
  @include custom-scrollbar;

  // Sections are the top of the docs: Guides, Core, Instrumentation and so on.
  .docs-section {
    cursor: pointer;
    border-radius: 8px;
    color: $color-dark-3;
    font-weight: 500;
    font-size: 1rem;

    &.active {
      color: $color-shamrock-main;
      font-weight: 600;
    }

    &:hover {
      background-color: $color-light-2;
    }
  }

  // Topics are the tiny groups inside sections. They don't have any
  // special function other than separating pages inside a topic.
  .docs-topic {
    padding-left: 1rem;
    color: $color-dark-3;
    text-transform: uppercase;
    font-size: 0.8rem;
    letter-spacing: 0.5px;
  }

  // The actual pages users can click on
  .docs-page {
    cursor: pointer;
    border-radius: 8px;
    padding-left: 2rem;
    color: $color-dark-2;
    font-weight: 500;
    font-size: 0.9rem;

    &.active {
      font-weight: 600;
      background-color: $color-light-1;
    }

    &:hover {
      background-color: $color-light-2;
    }
  }

  // Pages that are nested in other pages. Some sections like Akka,
  // JDBC and Kafka have nested pages that are styled by this class.
  .docs-sub-page {
    cursor: pointer;
    border-radius: 8px;
    padding-left: 1rem;
    color: $color-dark-3;
    font-weight: 400;
    font-size: 0.9rem;

    &:hover {
      background-color: $color-light-2;
    }

    &.active {
      color: $color-dark-2;
      font-weight: 600;
    }
  }

  .docs-sub-page-group {
    margin-left: 2rem;
    padding-left: 1rem;
    border-left: 1px solid $color-light-1;
  }

  ul {
    list-style: none;
    padding-left: 0px;
  }
}


.collapse-caret {
  float: right;
  width: 8px;
  height: 8px;
  border-top: 3px solid $color-dark-3;
  border-left: 3px solid $color-dark-3;
  transform: translate(0px, 10px) rotate(45deg);
  transition: 0.2s;
}

.collapse-caret-small {
  border-top: 2px solid $color-dark-4;
  border-left: 2px solid $color-dark-4;
}

.collapsed {
  .collapse-caret {
    transform: translate(0px, 7px) rotate(225deg);
  }
}

.mobile-docs-navbar {
  background-color: $color-light-4;
  border-bottom: 1px solid $color-light-1;
  z-index: 101;
  height: 52px;
  position: fixed;
  top: $navbar-height;
  width: 100%;
}

#mobile-docs-navigation {
  position: fixed;
  background-color: $color-light-3;
  height: calc(100% - 57px - 52px);
  @include custom-scrollbar;
}

.docs-container {
  background-color: white;
  border-radius: 16px;
  line-height: 1.6rem;
  min-height: 80vh;

  a {
    font-weight: bold;
  }

  h1, h2, h3, h4, h5, h6 {
    color: $color-dark-2;
    margin-bottom: 1rem;
    scroll-margin-top: -4rem;

    .heading-anchor {
      position: relative;
      color: $color-shamrock-main;
      display: none;
    }

    &:hover {
      .heading-anchor {
        display: inline-block;
      }
    }
  }


  h1 {
    color: $color-dark-1;
    margin-top: 2rem;
    font-size: remSize(34);
    line-height: remSize(38);

    @media (max-width: $xs-max) {
      font-size: remSize(20);
      line-height: remSize(24);
    }
  }

  h2 {
    margin-top: 2rem;
    font-size: remSize(26);
    line-height: remSize(30);

    @media (max-width: $xs-max) {
      font-size: remSize(16);
      line-height: remSize(20);
    }
  }

  h3 {
    margin-top: 2rem;
    font-size: remSize(24);
    line-height: remSize(30);

    @media (max-width: $xs-max) {
      font-size: remSize(15);
      line-height: remSize(20);
    }
  }

  h4 {
    font-size: remSize(18);
    line-height: remSize(22);

    @media (max-width: $xs-max) {
      font-size: remSize(15);
      line-height: remSize(20);
    }
  }

  h5 {
    font-size: remSize(15);
    line-height: remSize(20);

    @media (max-width: $xs-max) {
      font-size: remSize(15);
      line-height: remSize(20);
    }
  }

  h6 {
    font-size: remSize(14);
    line-height: remSize(18);

    @media (max-width: $xs-max) {
      font-size: remSize(14);
      line-height: remSize(18);
    }
  }
}

.docs-mobile-navigation-container {

  ul {
    list-style: none;
    padding-left: 1.5rem;

    li {
      margin-top: 1rem;

      a {
        color: $color-dark-1;
      }
    }
  }

  .section-collapse {
    cursor: pointer;
    @include angle-up-down-expanders;
  }
}

